--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 
 <style>
 :root{
---bg:#0b0b0b; /* near black */
---panel:#0f0f0f;
---gold:#d4af37;
---muted:#bfbfbf;
+  --bg:#0b0b0b;
+  --panel:#0f0f0f;
+  --gold:#d4af37;
+  --muted:#bfbfbf;
 --glass: rgba(255,255,255,0.03);
 --accent: #c9a53a;
 --radius:14px;
 }
 *{box-sizing:border-box}
-body{margin:0;font-family:'Inter',system-ui,Arial,sans-serif;background:var(--bg);color:#fff;-webkit-font-smoothing:antialiased}
+body{margin:0;font-family:'Inter',system-ui,Arial,sans-serif;body {
+  background: var(--bg); /* qora */
+  color: #ffffff; /* oq matn */
+}
+-webkit-font-smoothing:antialiased}
 
 
 /* NAVBAR */
