--- a/index.html
+++ b/index.html
@@ -1,89 +1,144 @@
 <!DOCTYPE html>
 <html lang="uz">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>HisobHub — Buxgalteriya xizmatlari</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HisobHub — Buxgalteriya xizmatlari</title>
 
+  <style>
+    :root{
+      --bg:#0a0a0a;
+      --panel:#111;
+      --gold:#d4af37;
+      --text:#ffffff;
+      --muted:#bbbbbb;
+    }
 
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    *{
+      margin:0;
+      padding:0;
+      box-sizing:border-box;
+      font-family: "Inter", Arial, sans-serif;
+    }
 
+    body{
+      background:var(--bg);
+      color:var(--text);
+      line-height:1.6;
+    }
 
-<style>
-:root{
-  --bg:#0b0b0b;
-  --panel:#0f0f0f;
-  --gold:#d4af37;
-  --muted:#bfbfbf;
---glass: rgba(255,255,255,0.03);
---accent: #c9a53a;
---radius:14px;
-}
-*{box-sizing:border-box}
-body{margin:0;font-family:'Inter',system-ui,Arial,sans-serif;body {
-  background: var(--bg); /* qora */
-  color: #ffffff; /* oq matn */
-}
--webkit-font-smoothing:antialiased}
+    header{
+      background:#0f0f0f;
+      padding:40px 20px;
+      text-align:center;
+      font-size:32px;
+      font-weight:700;
+      color:var(--gold);
+      border-bottom:2px solid var(--gold);
+      text-shadow:0 0 10px rgba(212,175,55,0.4);
+    }
 
+    .container{
+      max-width:900px;
+      margin:auto;
+      padding:20px;
+    }
 
-/* NAVBAR */
-nav{display:flex;align-items:center;justify-content:space-between;padding:18px 24px;background:linear-gradient(90deg, rgba(0,0,0,0.6), rgba(0,0,0,0.4));position:sticky;top:0;z-index:1000;border-bottom:1px solid rgba(255,255,255,0.03)}
-.nav-left{display:flex;align-items:center;gap:18px}
+    .section{
+      background:var(--panel);
+      padding:25px;
+      margin-bottom:25px;
+      border-radius:16px;
+      border:1px solid #333;
+      box-shadow:0 0 15px rgba(212,175,55,0.15);
+      transition:0.3s;
+    }
 
+    .section:hover{
+      transform:translateY(-4px);
+      box-shadow:0 0 25px rgba(212,175,55,0.25);
+    }
 
-/* Logo (SVG text based) */
-.logo-wrap{display:flex;align-items:center;gap:12px}
-.logo-svg{width:48px;height:48px}
-.brand-name{font-weight:800;color:var(--gold);font-size:20px;letter-spacing:0.6px}
-.brand-sub{font-size:12px;color:var(--muted);margin-top:2px}
+    h2{
+      color:var(--gold);
+      font-size:26px;
+      margin-bottom:15px;
+      font-weight:700;
+    }
 
+    p, li{
+      font-size:18px;
+      color:var(--text);
+    }
 
-/* Nav links */
-.nav-links{display:flex;gap:18px;align-items:center}
-.nav-links a{color:var(--muted);text-decoration:none;font-weight:600}
-.nav-links a:hover{color:var(--gold)}
+    ul{
+      margin-left:20px;
+    }
 
+    a.button{
+      display:block;
+      background:var(--gold);
+      color:#000;
+      padding:14px;
+      text-align:center;
+      border-radius:10px;
+      text-decoration:none;
+      font-size:18px;
+      font-weight:700;
+      margin-bottom:12px;
+      transition:0.2s;
+    }
 
-/* language switch & CTA */
-.controls{display:flex;gap:12px;align-items:center}
-.lang-btn{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 10px;border-radius:8px;color:var(--muted);cursor:pointer}
-.cta{background:transparent;border:1px solid var(--gold);color:var(--gold);padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:700}
-.cta:hover{background:linear-gradient(90deg, rgba(212,175,55,0.08), rgba(201,165,58,0.06))}
+    a.button:hover{
+      background:#b6922b;
+    }
 
+    .footer{
+      text-align:center;
+      padding:20px;
+      margin-top:20px;
+      font-size:15px;
+      color:var(--muted);
+      border-top:1px solid #333;
+    }
+  </style>
+</head>
 
-/* HERO */
-.hero{padding:80px 20px;text-align:center;background:linear-gradient(180deg, rgba(13,13,13,0.6), rgba(9,9,9,0.85));border-bottom-left-radius:40px;border-bottom-right-radius:40px}
-.hero h1{font-size:40px;margin:0;color:var(--gold);letter-spacing:0.4px}
-.hero p{max-width:920px;margin:18px auto 0;color:var(--muted);font-size:18px;line-height:1.6}
-.hero-cta{margin-top:22px;display:flex;gap:12px;justify-content:center}
-.hero .btn{padding:12px 18px;border-radius:10px;text-decoration:none;font-weight:700}
-.primary{background:var(--gold);color:#0b0b0b}
-.secondary{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted)}
+<body>
 
+<header>HisobHub — Buxgalteriya xizmatlari markazi</header>
 
-/* MAIN LAYOUT */
-.container{max-width:1100px;margin:36px auto;padding:0 20px}
-.grid{display:grid;grid-template-columns:1fr 360px;gap:28px}
-@media (max-width:900px){.grid{grid-template-columns:1fr}}
+<div class="container">
 
+  <div class="section">
+    <h2>Biz haqimizda</h2>
+    <p>
+      HisobHub — professional buxgalteriya, soliq va konsalting xizmatlari ko‘rsatadigan zamonaviy markaz.
+      Biz biznesingizni yengillashtirish, hujjatlarni tartibga solish va barcha jarayonlarni avtomatlashtirishga yordam beramiz.
+    </p>
+  </div>
 
-/* Section */
-.section{background:var(--panel);padding:22px;border-radius:var(--radius);box-shadow:0 8px 40px rgba(0,0,0,0.6);border:1px solid rgba(255,255,255,0.03)}
-.section h2{margin:0 0 12px 0;color:var(--gold);font-size:20px}
+  <div class="section">
+    <h2>Xizmatlar</h2>
+    <ul>
+      <li>Buxgalteriya hisobini yuritish</li>
+      <li>Soliq hisobotlarini tayyorlash va topshirish</li>
+      <li>Konsalting xizmatlari</li>
+      <li>Kadrlar hisobini yuritish</li>
+      <li>Bir martalik hisobotlar</li>
+    </ul>
+  </div>
 
+  <div class="section">
+    <h2>Aloqa</h2>
+    <a class="button" href="tel:+998935680091">📞 Qo‘ng‘iroq qilish</a>
+    <a class="button" href="https://t.me/Qobuljon_91">📱 Telegram orqali bog‘lanish</a>
+    <a class="button" href="https://maps.app.goo.gl/FZwayVoxFo9kQEPP7">📍 Manzil (Google Xaritalar)</a>
+  </div>
 
-/* Services cards */
-.services{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px}
-.svc{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));padding:14px;border-radius:12px;border:1px solid rgba(255,255,255,0.02)}
-.svc h3{margin:0;color:#fff;font-size:16px}
-.svc p{color:var(--muted);font-size:14px;margin-top:8px}
+</div>
 
+<div class="footer">© 2025 HisobHub. Barcha huquqlar himoyalangan.</div>
 
-/* Pricing */
-.pricing{display:flex;gap:14px;flex-wrap:wrap}
-.plan{background:linear-gradient(180deg, rgba(212,175,55,0.06), rgba(255,255,255,0.01));padding:18px;border-radius:12px;min-width:200px;border:1px solid rgba(212,175,55,0.08)}
-.plan h4{margin:0;color:var(--gold)}
-.price{font-size:28px;font-weight:800;margin:10px 0;color:#fff}
+</body>
 </html>
